--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@ body {
 #showcase {
   position: relative;
   background: url(../img/mountains.jpg);
-  min-height: 600px; }
+  min-height: 650px; }
   #showcase .primary-overlay {
     background: rgba(50, 146, 166, 0.8);
     position: absolute;
@@ -20,3 +20,20 @@ body {
     left: 0;
     width: 100%;
     height: 100%; }
+
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid; }
+
+#accordion .card-header {
+  box-sizing: border-box;
+  padding: 0 !important;
+  height: 40px;
+  position: relative; }
+  #accordion .card-header h5 div {
+    cursor: pointer;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    line-height: 36px; }
