--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,7 +19,7 @@ body{
 #showcase{
   position: relative;
   background: url(../img/mountains.jpg);
-  min-height: 600px;
+  min-height: 650px;
 
   .primary-overlay{
     background:$primary-overlay;
@@ -29,4 +29,27 @@ body{
     width:100%;
     height: 100%;
   }
+}
+
+.info-header{
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid;
+}
+
+#accordion .card-header{
+
+  box-sizing: border-box;
+  padding: 0 !important;
+  height: 40px;
+  position: relative;
+
+  h5 div{
+    cursor: pointer;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    line-height: 36px;
+  }
+
 }
