--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,3 +37,19 @@ body {
     height: 100%;
     width: 100%;
     line-height: 36px; }
+
+#authors img {
+  margin-top: -50px; }
+
+#authors .fa {
+  font-size: 25px; }
+
+#authors .card:hover {
+  background: #3292a6;
+  color: #fff; }
+  #authors .card:hover .text-muted {
+    color: #444 !important; }
+  #authors .card:hover .fa {
+    color: #fff; }
+  #authors .card:hover .fa:hover {
+    color: #444 !important; }
