--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -77,3 +77,17 @@ body{
     }
   }
 }
+
+@media (max-width: 767px){
+  .boxCard{
+    margin-bottom: 10px;
+    box-shadow: 2px 2px 2px #888;
+  }
+  .authorCard{
+    margin-bottom: 40px;
+    box-shadow: 2px 2px 2px #888;
+  }
+  .mainText{
+    font-size: 4rem !important;
+  }
+}
